Fix z-index on modal barrier

--- a/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
+++ b/packages/espresso-block-explorer-components/src/pages/inscriptions_page.css
@@ -610,6 +610,7 @@ dialog hr {
 
   pointer-events: none;
   touch-action: none;
+  z-index: 1;
 }
 
 .modal-barrier[data-display='true'] {
